# Shamir-Image-Secret-Sharing

./: .gitignore  README.md  Shamir.py  pyproject.toml  requirements.txt
readme/: README.zh-CN.md  README.zh-TW.md
tests/: test_shamir.py
